<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="730dp"
    android:background="@android:color/holo_green_dark"
    tools:context=".InfoCadaAlojamiento">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="412dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <!-- TextView para el nombre del alojamiento -->
        <TextView
            android:id="@+id/tituloNombreAlojamiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/audiowide"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.035" />

        <ImageView
            android:id="@+id/imgAlojamiento"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/foto_alojamiento"
            app:layout_constraintTop_toBottomOf="@+id/tituloNombreAlojamiento" />

        <TextView
            android:id="@+id/lblLocalidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/audiowide"
            android:text="@string/lblUbicacion"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgAlojamiento" />

        <TextView
            android:id="@+id/localidadAlojamiento"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toEndOf="@+id/lblLocalidad"
            app:layout_constraintTop_toTopOf="@+id/lblLocalidad" />

        <TextView
            android:id="@+id/lblPrecio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/audiowide"
            android:text="@string/precio"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblLocalidad" />

        <TextView
            android:id="@+id/precioAlojamiento"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toEndOf="@+id/lblPrecio"
            app:layout_constraintTop_toTopOf="@+id/lblPrecio" />

        <TextView
            android:id="@+id/lblDetalles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/audiowide"
            android:text="@string/detalles"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblPrecio" />

        <TextView
            android:id="@+id/detallesAlojamiento"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@+id/lblDetalles"
            app:layout_constraintTop_toBottomOf="@+id/lblDetalles" />

        <TextView
            android:id="@+id/lblActividades"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/audiowide"
            android:text="@string/actividades"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detallesAlojamiento" />

        <TextView
            android:id="@+id/actividadesAlojamiento"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@+id/lblActividades"
            app:layout_constraintTop_toBottomOf="@+id/lblActividades" />

        <TextView
            android:id="@+id/favorito"
            android:layout_width="263dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/audiowide"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/actividadesAlojamiento"
            app:layout_constraintTop_toBottomOf="@+id/actividadesAlojamiento" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnLlamar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_call"
            android:layout_marginStart="40dp"
            android:contentDescription="@string/llamar"
            app:layout_constraintTop_toTopOf="@+id/precioAlojamiento"
            app:layout_constraintStart_toEndOf="@id/precioAlojamiento"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_email"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/email"
            app:layout_constraintTop_toBottomOf="@+id/btnLlamar"
            app:layout_constraintStart_toStartOf="@id/btnLlamar"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>